bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: goutham
  name: goutham
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goutham
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: goutham
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: goutham
        resources: {}
---
