bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: goutham
  name: goutham
  namespace: goutham
spec:
  host: "goutham.sis-operations-sandbox-665928ed0d217537ce7ae6f03961fb79-0000.us-south.containers.appdomain.cloud"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: goutham
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
